# CofferFile

./: BENCHMARK.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: codeql.yml
cofferfile/: __init__.py  aes.py  decorator.py  zstd.py
docs/: cofferfile.html  fernetfile.html  index.html  search.js
docs/cofferfile/: aes.html  decorator.html  zstd.html
tests/: conftest.py  test_aes.py  test_benchmark.py  test_chain.py  test_cryptor.py  test_fernet.py  test_fernetfile.py  test_pynacl.py  test_zstd.py  tests_fernet  tests_nacl
